<resources>
    <string name="app_name">TOA</string>
    <string name="app_logo_container">App Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="sign_up">sign up</string>
    <string name="err_invalid_credentials">Invalid Credential</string>
    <string name="err_login_failure">Login Failure</string>
    <string name="err_empty_email">Please enter an email.</string>
    <string name="err_empty_password">Please enter a password.</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="today">Today</string>
    <string name="tommorrow">Tommorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="add_Task">New Task</string>
    <string name="change_date">Change Date</string>
    <string name="no_incomplete_tasks">All Task are completed.</string>
    <string name="reschedule">Reschedule</string>
    <string name="done">Done</string>
    <string name="completed_tasks">Completed</string>
    <string name="no_task_scheduled">No Task Scheduled</string>
    <string name="task_accomplished">Task Accomplished!</string>
    <string name="undo">Undo</string>
    <string name="submit">Submit</string>
    <string name="select_date_content_description">Select Date</string>
    <string name="action_submit_anyways">Submit Not Allowed</string>
    <string name="err_max_tasks_per_day_exceeded">Max limit reached!!</string>
    <string name="err_empty_task_description">Empty Task</string>
    <string name="task_rescheduled_to_past">Task cannot be schedule to Past</string>
    <string name="task_rescheduled">Reschedule Task</string>
    <string name="preferences">Preferences</string>
    <string name="num_tasks_per_day_label">Number Of Tasks Per Day</string>
</resources>