appId: "com.sawrose.toa"
---
- launchApp:
    clearState: true
- tapOn: "LOG IN"
- assertVisible: "Please enter an email."
- assertVisible: "Please enter a password."
- tapOn: "email"
- inputText: "adam@adam.com"
- assertNotVisible: "Please enter an email."
- tapOn: "password"
- inputText: "Hunter2"
- assertNotVisible: "Please enter a password."
- tapOn: "LOG IN"
- assertVisible: "You have nothing scheduled for this day. Make time for yourself."